--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,6 +1,6 @@
 .wrapper {
   margin: 30px auto;
-  max-width: 100px;
+  max-width: 800px;
   padding: 20px;
 }
 
@@ -20,11 +20,11 @@ footer {
   border-left: solid;
   padding-left: 1.5em;
   padding-bottom: 2em;
-  min-height: 400px;
+  min-height: 4px;
 }
 
 aside {
-  float: right;
+  float: left;
   width: 25%;
   margin-top: 1em;
 }
