--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,7 +21,7 @@ footer {
   padding-left: 1.5em;
   padding-bottom: 2em;
   min-height: 400px;
-  color: blue;
+  background-color: blue;
 }
 
 aside {
