Změna barvy pozadí (header)
Změna barvy pozadí v header z white na grey. Tato změna podle mě přispěje k lepší čitelnosti a přehlednosti.

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -18,7 +18,7 @@ header {
   background-repeat: no-repeat;
   background-position: 50%, 10%, 90%, 50%;
   background-size: 40%, 18%, 18%, 100%; 
-  background-color: white;
+  background-color: grey;
 }
 
 
